--- a/ansible/roles/swarm-consul/tasks/main.yaml
+++ b/ansible/roles/swarm-consul/tasks/main.yaml
@@ -14,16 +14,16 @@
       restart_policy: always
       ports:
       - "8500:8500"    
-  - name: run consul network
-    docker: 
-      name: consul-network
-      image: progrium/consul
-      state: started
-      command: "-server -bootstrap"
-      detach: True
-      restart_policy: always
-      ports:
-      - "8501:8500"
+#  - name: run consul network
+#    docker: 
+#      name: consul-network
+#      image: progrium/consul
+#      state: started
+#      command: "-server -bootstrap"
+#      detach: True
+#      restart_policy: always
+#      ports:
+#      - "8501:8500"
   - name: check consul download 
     stat: path=/opt/consul_0.7.3_linux_amd64.zip
     register: consul_zip_stat
