--- a/ansible/roles/swarm-node-ami/files/backend.conf
+++ b/ansible/roles/swarm-node-ami/files/backend.conf
@@ -1,63 +1,115 @@
 resolver 127.0.0.11 valid=5s ipv6=off;
 
 server {
-    listen 80;
-
-    root /usr/share/nginx/html;
-    server_name _;
-    return 301 https://$host$request_uri;
-}
-server {
-   listen 443;
-   server_name ~^(?<container>.*)\-console\.swarm.codepicnic.com$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-   add_header 'Access-Control-Allow-Origin' '*';
-   error_page 404 502 /502.html;
-   location = /502.html {
-      add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
-      #rewrite ^ https://codepicnic.com/502;
-   }
-
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
-
-   location / {
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "upgrade";
-      proxy_http_version 1.1;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header Host $host;
-      proxy_pass http://$container:15000;
-    }
-}
-
-server {
-   listen 443;
+   listen 80; 
    server_name ~^(?<container>.*)\-console\.codepicnic.com$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-   add_header 'Access-Control-Allow-Origin' '*';
-   error_page 404 502 /502.html;
+   add_header 'Access-Control-Allow-Origin' 'https://codepicnic.com';
+   add_header 'Access-Control-Allow-Credentials' 'true';
+   error_page 502 /502.html;
+   error_page 401 /401.html;
    location = /502.html {
-      add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
+      add_header 'Access-Control-Allow-Origin' 'https://codepicnic.com';
+      root /usr/local/openresty/nginx/conf.d;
+   }
+   location = /401.html {
+      add_header 'Access-Control-Allow-Origin' 'https://codepicnic.com';
+      root /usr/local/openresty/nginx/conf.d;
+   }
+
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      access_by_lua '
+            local jwt = require("nginx-jwt")
+            jwt.auth({
+        container=ngx.var.container,
+        exp=function (val) return tonumber(val)>=ngx.now() end
+        })
+      ';
+        #local container = jwt.get_claim("container")
+        #ngx.log(ngx.NOTICE, "Container: ", container)
+      #if ($http_X-Auth-UserId = '' ) { return 403; }      
+      proxy_hide_header Access-Control-Allow-Credentials;
+      proxy_hide_header Access-Control-Allow-Origin;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:15000;
+    }
+   location ~* \.(js|css)$ {
+      proxy_hide_header Access-Control-Allow-Credentials;
+      proxy_hide_header Access-Control-Allow-Origin;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:15000;
+    }
+   location /streams {
+      proxy_hide_header Access-Control-Allow-Credentials;
+      proxy_hide_header Access-Control-Allow-Origin;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:15000;
+    }
+}
+
+server {
+   listen 80;
+   server_name ~^(?<container>.*)\-console\.swarm.codepicnic.com$;
+   add_header 'Access-Control-Allow-Origin' 'https://codepicnic.com';
+add_header 'Access-Control-Allow-Credentials' 'true';
+error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' 'https://codepicnic.com';
+      root /usr/local/openresty/nginx/conf.d;
       #rewrite ^ https://codepicnic.com/502;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
+      access_by_lua '
+            local jwt = require("nginx-jwt")
+            jwt.auth({
+                container=ngx.var.container,
+                exp=function (val) return tonumber(val)>=ngx.now() end
+            })
+      ';
+            #local container = jwt.get_claim("container")
+            #ngx.log(ngx.NOTICE, "Container: ", container)
+      #if ($http_X-Auth-UserId = '' ) { return 403; }
+      proxy_hide_header Access-Control-Allow-Credentials;
+      proxy_hide_header Access-Control-Allow-Origin;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:15000;
+    }
+
+   location ~* \.(js|css)$ {
+      proxy_hide_header Access-Control-Allow-Credentials;
+      proxy_hide_header Access-Control-Allow-Origin;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:15000;
+    }
+   location /streams {
+      proxy_hide_header Access-Control-Allow-Credentials;
+      proxy_hide_header Access-Control-Allow-Origin;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
       proxy_http_version 1.1;
@@ -68,25 +120,18 @@ server {
 }
 
 
+
 server {
-   listen 443;
-   server_name ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|laravel|elixir|mono|swift)\.(.*)$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-   add_header 'Access-Control-Allow-Origin' '*';
+   listen 80;
+   server_name ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|elixir|mono|swift)\.(.*)$;
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
-      #rewrite ^ https://codepicnic.com/502;
+      root /usr/local/openresty/nginx/conf.d;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
       proxy_set_header Upgrade $http_upgrade;
@@ -95,30 +140,24 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       #proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header Host $host;
+      #proxy_set_header Access-Control-Allow-Origin "";
       proxy_pass http://$container:8080;
     }
 }
 
 
 server {
-   listen 443;
-   server_name ~^(?<container>.*)\-(phoenix)\.(.*)$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   listen 80;
+   server_name ~^(?<container>.*)\-(phoenix|jekyll_340)\.(.*)$;
    add_header 'Access-Control-Allow-Origin' '*';
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
-      #rewrite ^ https://codepicnic.com/502;
+      root /usr/local/openresty/nginx/conf.d;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
       proxy_set_header Upgrade $http_upgrade;
@@ -132,24 +171,18 @@ server {
 
 
 server {
-    listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby|rails4|rails50)\.(.*)$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+    listen 80;
+    server_name ~^(?<container>.*)\-(express|mean|angular|rails|ruby23|ruby22|ruby|rails4|rails50|react)\.(.*)$;
    add_header 'Access-Control-Allow-Origin' '*';
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
+      root /usr/local/openresty/nginx/conf.d;
       #rewrite ^ https://codepicnic.com/502;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
       proxy_set_header Upgrade $http_upgrade;
@@ -157,32 +190,52 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
-      proxy_pass http://$container:3000;
     proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-Frame-Options;
+      proxy_pass http://$container:3000;
+    }
+}
+
+server {
+    listen 80;
+    server_name ~^(?<container>.*)\-(ember)\.(.*)$;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /usr/local/openresty/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-Frame-Options;
+      proxy_pass http://$container:4200;
     }
 }
 
 
-
 server {
-    listen 443;
-    server_name ~^(?<container>.*)\-(django)\.codepicnic.com$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+    listen 80;
+    server_name ~^(?<container>.*)\-(cakephp|cakephp_340)\.(.*)$;
    add_header 'Access-Control-Allow-Origin' '*';
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
+      root /usr/local/openresty/nginx/conf.d;
       #rewrite ^ https://codepicnic.com/502;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
       proxy_set_header Upgrade $http_upgrade;
@@ -190,30 +243,51 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
+      proxy_pass http://$container:8765;
+        proxy_set_header X-Forwarded-Proto https;
+    }
+}
+
+
+server {
+    listen 80;
+    server_name ~^(?<container>.*)\-(elm|django|laravel|symfony)\.codepicnic.com$;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /usr/local/openresty/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_hide_header X-Frame-Options;
       proxy_pass http://$container:8000;
     }
 }
 
 
 server {
-    listen 443;
-    server_name ~^(?<container>.*)\-(perfect)\.codepicnic.com$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+    listen 80;
+    server_name ~^(?<container>.*)\-(perfect|perfect2)\.codepicnic.com$;
    add_header 'Access-Control-Allow-Origin' '*';
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
+      root /usr/local/openresty/nginx/conf.d;
       #rewrite ^ https://codepicnic.com/502;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
       proxy_set_header Upgrade $http_upgrade;
@@ -225,26 +299,125 @@ server {
     }
 }
 
+server {
+   listen 80; 
+   server_name ~^(?<container>.*)\-(dancer|flask)\.(.*)$;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /usr/local/openresty/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_pass http://$container:5000;
+    }
+}
 
 server {
-    listen 443;
+   listen 80;
+   server_name ~^(?<container>.*)\-(sinatra)\.(.*)$;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /usr/local/openresty/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-Frame-Options;
+
+      proxy_pass http://$container:9292;
+    }
+}
+
+server {
+   listen 80;
+   server_name ~^(?<container>.*)\-(cuba)\.(.*)$;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /usr/local/openresty/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-Proto https;
+      proxy_hide_header X-fRAme-Options;
+      proxy_pass http://$container:9292;
+    }
+}
+
+
+server {
+    listen 80;
+    server_name ~^(?<container>.*)\-(?<port>[0-9]+)\.codepicnic.com$;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /usr/local/openresty/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:$port;
+    }
+}
+
+
+
+server {
+    listen 80;
     server_name ~^(?<container>.*)\-(.*)\.codepicnic.com$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
    add_header 'Access-Control-Allow-Origin' '*';
    error_page 404 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
+      root /usr/local/openresty/nginx/conf.d;
       #rewrite ^ https://codepicnic.com/502;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
       proxy_set_header Upgrade $http_upgrade;
@@ -257,29 +430,19 @@ server {
     }
 }
 
-
-
-
-
 server {
-   listen 443;
-   server_name ~^(?<container>.*)\-(drupal)\.(.*)$;
-   ssl on;
-   ssl_certificate /etc/nginx/conf.d/nginx.crt;
-   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-   ssl_prefer_server_ciphers on;
-   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   listen 80;
+   server_name ~^(?<container>.*)\-(wordpress|drupal)\.(.*)$;
    add_header 'Access-Control-Allow-Origin' '*';
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      root /etc/nginx/conf.d;
+      root /usr/local/openresty/nginx/conf.d;
       #rewrite ^ https://codepicnic.com/502;
    }
 
-   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
-   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+   error_log logs/swarm.codepicnic.com-error.log warn;
+   access_log  logs/swarm.codepicnic.com-access.log  main;
 
    location / {
       proxy_set_header Upgrade $http_upgrade;
