--- a/ansible/roles/swarm-ec2-ami/tasks/main.yaml
+++ b/ansible/roles/swarm-ec2-ami/tasks/main.yaml
@@ -25,7 +25,7 @@
     with_items: '{{ ec2.instances }}'
   - name: Wait for SSH to come up
     wait_for: host={{ item.private_ip }} port=22 delay=60 timeout=320 state=started
-    with_items: ec2.instances
+    with_items: '{{ ec2.instances }}'
   - name: set fact
     set_fact: var_ec2="{{ ec2 }}"
 
