--- a/ansible/roles/docker-xenial/tasks/main.yaml
+++ b/ansible/roles/docker-xenial/tasks/main.yaml
@@ -11,7 +11,7 @@
   - name: add key
     apt_key: id=58118E89F3A912897C070ADBF76221572C52609D keyserver=hkp://p80.pool.sks-keyservers.net:80
   - name: copy docker repo
-    template: src=docker.list dest=/etc/apt/sources.list.d
+    copy: src=docker.list dest=/etc/apt/sources.list.d
   - name: apt-get update
     apt: update_cache=yes
   - name: apt-get purge lxc-docker 
@@ -30,8 +30,8 @@
     apt: name="docker-engine={{ docker_engine }}" state=present force=yes
     #apt: name=docker-engine state=present
   - name: start docker
-    #systemd: state=started daemon_reload=yes name=docker enabled=yes
-    service: name=docker enabled=yes state=started
+    systemd: state=started daemon_reload=yes name=docker enabled=yes
+    #service: name=docker enabled=yes state=started
   - name: add user
     shell: usermod -aG docker ubuntu 
   - name: install docker-py
