--- a/ansible/roles/swarm-node-ami/files/docker-compose.yaml
+++ b/ansible/roles/swarm-node-ami/files/docker-compose.yaml
@@ -24,7 +24,8 @@ services:
     ports:
     - "80:80"
     volumes:
-    - "/usr/local/openresty/nginx:/usr/local/openresty/nginx"
+    - "/usr/local/openresty/nginx/conf:/usr/local/openresty/nginx/conf"
+    - "/usr/local/openresty/nginx/conf.d:/usr/local/openresty/nginx/conf.d"
     - "/usr/local/openresty/nginx-lua:/usr/local/openresty/nginx-lua"
     environment:
     - JWT_SECRET=e7b3b5c7f422a4abdee2bb648224104823e5acd6779c50f9005c7613e168288024e1dc98260e03f29b6558ba8fb0b8b9ba1a9f4a6fad0425c286bdcfbf8b35a1
